# composing-functions

./: .env  .env.local.example  .gitignore  README.md  pyproject.toml
configs/: evaluation_by_model.py  generate_data.py
configs/llama_3_3b/: evaluation.py  hop_lens_corr.py  lens.py  lens_token_identity.py  linear_task_embedding.py  patching_across_tasks_comp.py  patching_across_tasks_direct.py  patching_across_tasks_max.py  residual_stream.py  task_lens_corr.py  task_lens_corr_token_identity.py
plotting/: compositionality_gap.py  compositionality_gap_by_model.py  compositionality_gap_by_size.py  hop_logit_lens_correlation.py  intermediate_var_distribution.py  logit_lens_overall.py  logit_lens_per_task.py  median_var_location.py  patching_across_tasks.py  plotting_utils.py  task_logit_lens_correlation.py  task_token_identity_correlation.py  tasks_table.py  token_identity_overall.py  token_identity_per_task.py
src/composing_functions/: lens.py  prompting.py
src/composing_functions/experiments/: evaluate_task.py  generate_data.py  hop_lens_correlation.py  lens.py  linear_task_embedding.py  patching.py  residual_stream.py  task_lens_correlation.py
src/composing_functions/experiments/utils/: __init__.py  __tango__.py  base_classes.py
src/composing_functions/models/: __init__.py  api.py  transformers.py
src/composing_functions/tasks/: __init__.py  arithmetic.py  translation.py  wikidata.py
